# -firmware-esp-logger

./: .cproject  .gitignore  .project  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.cpp  main.hpp  main_tasks.cpp  specialWakeupFunc.cpp
main/commonEnums/: collection_t.hpp  request_type_t.hpp  wekup_sourse_t.hpp
main/commonFunctions/: addresFunc.hpp  collectionFunc.hpp  convertFunc.hpp  eventFunc.hpp  request_type_func.hpp
main/commonStruct/: global_settings_t.hpp  request_t.hpp  wifi_settings_t.hpp
main/common_const/: memory_w25q_const.hpp  pins_config_const.hpp  sensors_const.hpp  settings_const.hpp
main/dateTime/: DateTime.hpp  DateTimeSensor.cpp  DateTimeSensor.hpp
main/eventMenager/: EventMenager.cpp  EventMenager.hpp  EventMenagerInitFunc.cpp  EventMenagerKillFunc.cpp  EventMenagerNotifFunc.cpp  EventMenagerOverride.cpp  EventMenagerTimeFunc.cpp  EventTypes.hpp
main/eventMenager/events/: CaseOpeningEvent.cpp  CaseOpeningEvent.hpp  IEvent.cpp  IEvent.hpp  SleepEvent.cpp  SleepEvent.hpp
main/memoryW25Q/: W25Q128.cpp  W25Q128.hpp
main/msgCreater/: MessageCreater.cpp  MessageCreater.hpp  MessageCreaterTypes.hpp
main/msgFromServerProcessors/: MsgFromServerProcessors.cpp  MsgFromServerProcessors.hpp  MsgServerTypes.hpp
main/msgFromServerProcessors/collectionProcessor/: ICollectionProcessor.cpp  ICollectionProcessor.hpp  (+2 more)
main/networkSystem/: NetworkMenager.cpp  NetworkMenager.hpp  NetworkTypes.hpp
main/notification/: Notification.cpp  Notification.hpp  NotificationTypes.hpp
main/sensor/: ISensor.cpp  ISensor.hpp  SensorTypes.hpp
main/storage/: Storage.cpp  Storage.hpp  StorageTypes.hpp
main/uploader/: Uploader.cpp  Uploader.hpp  UploaderTypes.hpp
(+12 files in other folders)
